<resources>
    <string name="app_name">Plata</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="notification_title">Plata Alert</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="title_activity_maps">Track</string>
    <string name="title_activity_maps_all">Locate</string>
    <string name="firebase_path" translatable="false">columbus-mobile</string>
    <string name="firebase_email" translatable="false">columbus-dev@gmail.com</string>
    <string name="firebase_password" translatable="false">testing@123</string>
    <!--<string name="columbus_ms_url" >http://10.0.2.2:6111</string>-->
    <string name="columbus_ms_url" translatable="false">http://35.192.219.95:6111</string>
    <!--<string name="notification_ms_url" translatable="false">http://10.0.2.2:8090</string>-->
    <!--<string name="notification_ms_url" translatable="false">http://34.74.60.4:8090</string>-->

    <string name="title_activity_replay">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAXJjOZYCyg5VE4tacOue0x8RGcHlnf_qI</string>
    <string-array name="timeSlot">
        <item>08:00 AM -09:00 AM</item>
        <item>09:00 AM -10:00 AM</item>
        <item>10:00 AM -11:00 AM</item>
        <item>11:00 AM -12:00 PM</item>
        <item>01:00 PM -02:00 PM</item>
        <item>02:00 PM -03:00 PM</item>
        <item>03:00 PM -04:00 PM</item>
        <item>04:00 PM -05:00 PM</item>
        <item>05:00 PM -06:00 PM</item>
        <item>06:00 PM -07:00 PM</item>
        <item>07:00 PM -08:00 PM</item>
        <item>08:00 PM -09:00 PM</item>
        <item>09:00 PM -10:00 PM</item>
        <item>10:00 PM -11:00 PM</item>
        <item>11:00 PM -12:00 AM</item>
    </string-array>

    <string-array name="acceptedMode">
        <item>Paytm</item>
        <item>PhonePe</item>
        <item>BHIM</item>
    </string-array>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_change_pwd">Change Password</string>
    <string name="title_activity_upgrade">Upgrade Version</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="login_prompt_username">User Name</string>
    <string name="login_prompt_password">Password</string>
    <string name="pwd_prompt_password">New Password</string>
    <string name="pwd_prompt_password1">Confirm New Password</string>


    <string name="registration1_prompt_username">Mobile Number*</string>
    <string name="registration1_prompt_password">Password*</string>
    <string name="registration1_prompt_retype_password">Re-type password</string>
    <string name="registration1_prompt_mobile_number">Mobile Number (mandatory)</string>
    <string name="registration1_next_button">Next</string>
    <string name="registration1_title">Registration</string>
    <string name="registration1_error_username_blank">Mobile number cannot blank</string>
    <string name="registration1_error_username_alreadyTaken">Mobile number already registered</string>
    <string name="registration1_error_password_blank">Password cannot blank</string>
    <string name="registration1_error_password_notMatch">Retyped Password does not match</string>
    <string name="registration1_error_mobile_invalid">Invalid mobile number</string>


    <string name="registration2_title">OTP Verification</string>
    <string name="registration2_progressbar_msg">Validating OTP</string>
    <string name="registration2_progressbar_resendotp_msg">Resending OTP</string>

    <string name="registration3_title">Address</string>
    <string name="store_map_title">Store Location</string>
    <string name="store_details_title">Store Details</string>
    <string name="store_payment_options_title">Recieve Payment</string>
    <string name="store_membership_title">Membership</string>
    <string name="store_inventory_title">Inventory</string>
    <string name="store_closing_time_blank">Please fill store closing time</string>
    <string name="store_opening_time_blank">Please fill store opening time</string>
    <string name="store_time_format_error">Please correct format (eg 21:00)</string>
    <string name="store_delivery_charge_format_error">Please correct the value</string>

    <string name="registration3_progress_title">Locating Position...</string>
    <string name="registration3_progressbar_msg">Updating details ..</string>
    <string name="registration3_error_name_blank">Name cannot blank</string>
    <string name="registration3_error_blank">Please enter non-blank value</string>
    <string name="mrp_lessthan_price_error_name_blank">MRP cannot be lower than offer price</string>
    <string name="registration3_error_address_blank">Address cannot blank</string>
    <string name="registration3_error_city_blank">City cannot blank</string>
    <string name="registration3_error_pincode_blank">Pincode cannot blank</string>
    <string name="registration3_error_state_blank">Invalid State</string>
    <string name="registration3_error_email_invalid">Invalid email id</string>

    <string name="registration4_title">Terms And Conditions</string>
    <string name="registration4_progressbar_msg">Updating ..</string>

    <string name="profile_title">Profile</string>

    <string name="cr_details_title">Cash Request</string>
    <string name="order_details_title">Order Details</string>

    <string name="inventory_details_title">Inventory Item</string>
    <string name="cr_success_title"></string>
    <string name="new_cash_request_lenders_title">Nearby Lenders</string>
    <string name="nearby_stores_title">Nearby Stores</string>

    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is to short</string>
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="error_invalid_payment_option">Please select atleast one payment option</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_pwd_dont_match">Password does not match</string>
    <string name="msg_pwd_changed">Password changed. Please login.</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="register_btn">Update</string>
    <string name="registerNextBtn"><![CDATA[Next >]]></string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tc1">1. The Terms and Conditions binds you not to involve in any manipulative activities, trade illegal goods, consume public funds and evade taxes as well as use methods that are used to conceal these crimes and the money derived from there.</string>
    <string name="tc2">2. The application is only a platform to help a person who is need of cash, by providing him/her cash in return of online money transfer.</string>
    <string name="tc3">3. The person himself/herself is liable for any misuse of the platform provided - not the company.</string>
    <string name="tc4">4. The Terms and Condition binds you not to do any illegal activities through the app described under Government of India and Reserve Bank of India</string>
    <string name="tc5">Detailed Terms and Condition https://eunicoinfotech.com/our-policies</string>

    <string name="tc_heading">Terms and Conditons</string>
    <string name="label_transfer_mode"><u>Mode of Transfer*</u></string>

    <string name="rateLabel1">Rate</string>
    <string name="rateLabel2">for the transaction !!</string>
    <string name="frsLabel1">FRS </string>

    <string name="bankaccount_error_account_number_blank">Account number cannot blank</string>
    <string name="bankaccount_error_account_number_unmatch">Does not match account number entered before</string>
    <string name="bankaccount_error_pan_number_blank">Pan cannot be blank</string>
    <string name="bankaccount_error_ifs_number_blank">IFC code cannot blank</string>

    <string name="direct_payment_instruction_blank">Instructions cannot be blank</string>
    <string name="extending_membership_msg">Updating membership details ..</string>
    <string name="getting_ledger_details">Getting account details ..</string>

    <string name="creating_payment">Creating Payment ..</string>

</resources>
